# SparseBench

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md
data/tiny/: diag5.mtx  duplicate5.mtx  integer5.mtx  nonsym5.mtx  pattern5.mtx  symmetric5.mtx
docs/: SparseBench_Hyak_Execution_Plan.md
docs/blog/: sparsebench_hyak_spmv.md
docs/reports/: sparsebench_spmv_baseline_report.md
include/sparsebench/: csr.hpp  matrix_market.hpp  spmv.hpp  timer.hpp
scripts/: analyze_spmv_baseline.py  download_suitesparse.sh  generate_report_assets.py  run_local_smoke.ps1
slurm/: spmv_eigen_baseline_cpu_g2.slurm  spmv_mem2x_scaling.slurm  spmv_smoke_cpu_g2.slurm
src/: csr.cpp  main_spmv.cpp  main_spmv_eigen.cpp  matrix_market.cpp  spmv.cpp
tests/: check_cli_csv.cmake  test_sparsebench.cpp
